# rs-client-libraries

./: .pre-commit-config.yaml  README.adoc  README.md  bandit.yml  pyproject.toml
.github/actions/build-python-api/: action.yml
.github/actions/build-technical-doc/: action.yml
.github/actions/install-python/: action.yml
.github/actions/poetry-install/: action.yml
.github/actions/publish-docker/: action.yml
.github/actions/publish-wheel/: action.yml
.github/dockerfiles/: Dockerfile.jupyter  Dockerfile.store
.github/workflows/: check-code-quality.yml  generate-documentation.yml  publish-binaries.yml
docs/: index.adoc
docs/doc/: index.md
docs/rs_workflows/: index.adoc
prefect_flows/: pyproject.toml
rs_client/: __init__.py  auxip_client.py  cadip_client.py  rs_client.py  stac_client.py
rs_common/: __init__.py  config.py  logging.py  opentelemetry.py  serialization.py
rs_server_prefect_flows/: example.py  pyproject.toml
rs_workflows/: __init__.py  common.py  example.py  pyproject.toml  s1_l0.py  staging.py
rs_workflows/.github/: Dockerfile
rs_workflows/config/: dpr_config_template.yaml
rs_workflows/utils/: __init__.py  logging.py  opentelemetry.py
scripts/: run_staging.py  test_ingestion.py  test_staging.py
tests/: __init__.py  common.py  conftest.py  test_common.py  test_example.py  test_opentelemetry.py  test_rs_client.py  test_s1_l0.py  test_stac_client.py  test_staging.py
tests/resources/: adgs_catalog.json  cadip_catalog.json  dpr_answer.json  dpr_config_test.yaml  files_stac.json
