[project]
name = "rs-client-libraries"
version = "0.0.0" # see: https://github.com/mtkennerly/poetry-dynamic-versioning

[tool.poetry]
name = "rs-client-libraries"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.adoc"

packages = [
    { include = "rs_workflows" },
]

# This root project is not used in release production.
# It's only used by the CI/CD to run pytest, pylint, mypy etc... on the whole github project.

# All the dependencies for release are set in the sub-projects
[tool.poetry.dependencies]
python = "^3.11"
prefect = "^2.14.21"
numpy = "^1.26.4"
prefect-dask = "^0.2.6"
opentelemetry-distro = "^0.45b0" # then run 'poetry run opentelemetry-bootstrap -a install'
opentelemetry-exporter-otlp = "^1.24.0"
python-logging-loki = "^0.3.1"

[tool.poetry.group.dev]
optional = true

# All the dev dependencies are set here so they can be used by the CI.
[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-error-for-skips = "^2.0.2"
black = "==24.3.0"
mypy = "^1.6.1"
pre-commit = "^3.5.0"
bandit = "^1.7.5"
safety = "^2.3.5"
pylint = "^3.0.3"
pytest-docker = "^2.0.1"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
flake8 = "^6.1.0"
flake8-pyproject = "^1.2.3"
responses = "^0.25.0"

[tool.poetry.group.demo.dependencies]
jupyterlab = "^4.1.6"
boto3 = "^1.34.91"

[tool.poetry-dynamic-versioning] # needs: poetry self add "poetry-dynamic-versioning[plugin]"
enable = true
tagged-metadata = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
markers = [
    "unit", # mark a test as unittest
    "integration", # mark a test as integration test
]
asyncio_mode = "auto"

[tool.mypy]
warn_redundant_casts = true
# Force analyze of partially annotate function signatures
check_untyped_defs = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 120
# per-file-ignores = [
#     '__init__.py:F401',
# ]

[tool.pylint.messages_control]
max-line-length=120
disable = "logging-fstring-interpolation"

[tool.pylint.MASTER]
ignore-paths = '^docs/.*$'

[tool.pylint.MISCELLANEOUS]
notes = ["XXX"] # no errors on TODO and FIXME

[tool.pylint.SIMILARITIES]
# Minimum lines number of a similarity FIXME.
min-similarity-lines=10

[tool.bandit.assert_used]
skips = ['*/test_*.py']
